# Micron_AGV

./: README.md
AGV-GUI-master/: README.md
AGV-GUI-master/src/: AGV-UI.pro  AGV-UI.pro.user.120c2cd  AGV-UI.pro.user.2a29e0d  AGV-UI.pro.user.cb90f50  ListenerNode.cpp  MarkerNode.cpp  TalkerNode.cpp  VizlibWidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  resource.qrc
AGV-GUI-master/src/includes/: ListenerNode.h  MarkerNode.h  Settings.h  TalkerNode.h  VizlibWidget.h  buttons.h  labels.h  mainwindow.h  msgs.h
AGV-GUI-master/src/qml/: Dial.qml  TurnIndicator.qml
Arduino/Misc/: dac.ino  encoder_combined_with_library.ino  encoders_combined.ino  old_pid.ino  ultrasonic_with_newping.ino  ultrasonic_with_pulsein.ino
Arduino/arduino_dac_with_pid/: arduino_dac_with_pid.ino
Arduino/arduino_dac_without_pid/: arduino_dac_without_pid.ino
Arduino/encoder_left/: encoder_left.ino
Arduino/encoder_right/: encoder_right.ino
Documentation/Data/: velocity_to_voltage_graph.xlsx
Documentation/Gimp/: GIMP READ ME
Documentation/Initial hardware setup/: arduino.adoc  joystick.adoc  microstrain_imu.adoc  sick_tim551_2d_lidar.adoc  ubuntu_hp_setup.md  udev_rules.adoc  velodyne_vlp16_3d_lidar.adoc
Documentation/Misc/: usefulstuff.adoc
Documentation/ROS nodes documentation/: agv_library.md  dynamixel_steering_controller.adoc  health_monitor.catnip  joystick_teleop.adoc  local_planner.md  mpc.md  stanley_steering.adoc
Documentation/Rosbag + making path/: Create_paths.md  rosbag_gmapping.md  rosbag_record.md  storing_bag_data_into_csv.adoc
Documentation/Scholarly Papers/: LOAM.md
Others/: template_class.cpp
Others/Dynamixel Code/: dynamixel_brake_controller(1.0).cpp  dynamixel_brake_controller(2.0).cpp  dynamixel_brake_controller_mx106.cpp  dynamixel_daisy_chain.cpp  dynamixel_steering_controller(pro).cpp  dynamixel_steering_controller(proplus).cpp
Others/Dynamixel Code/h54p for both steering and brake/: dynamixel_daisychain_brake_steering.cpp  dynamixel_multiport_brake_steering.cpp
Others/STM32/: serialstm32.py  stm32_test.launch
Others/STM32/STM32_DAC/: README.md  main.c  usbd_cdc_if.c
Others/Socket Example/: socket_client.py  socket_server.py
Others/Startup Scripts/: unit1.bash  unit2.bash  unit3.bash
Others/Stepper Motors/: dac_and_brake.ino  steering.ino
Others/Unused Code/: imu_frame_transformer.cpp  pcl2_to_pcl_converter.cpp
Others/cartographer/: agv.launch  agv.lua  agv_2scan.launch  agv_2scan.lua  agv_cartographer_localization.launch  agv_demo.launch  agv_demo_2scan.launch  agv_demo_localization.launch  agv_demo_localization_2scan.launch  agv_localization.launch  agv_localization.lua  agv_localization_2scan.launch  agv_localization_2scan.lua  demo_my_robot.launch  my_robot.launch  my_robot.lua  my_robot_localization.lua  vlp16-imu.urdf  vlp16-imu_2scan.urdf
agv/: CMakeLists.txt  package.xml
agv/cfg/: behaviour_planner.cfg  collision_detector.cfg  lane_publisher.cfg  local_planner.cfg
agv/config/: rosconsole.config
agv/include/behaviour_planner/: behaviour_planner_helper.cpp  behaviour_planner_helper.h
agv/include/collision_detector/: collision_detector_helper.cpp  collision_detector_helper.h
agv/include/common/: frenet.cc  frenet.h  lane.cc  lane.h  math_utils.cc  math_utils.h  motion_model.cc  motion_model.h  obstacle.cc  obstacle.h  polynomials.cc  polynomials.h  quartic_polynomial.cc  quartic_polynomial.h  quintic_polynomial.cc  quintic_polynomial.h  spline.cc  spline.h  vehicle.cc  vehicle.h  vehicle_state.cc  vehicle_state.h
agv/include/local_planner/: frenet_optimal_trajectory_planner.cc  frenet_optimal_trajectory_planner.h
agv/include/mpc/: MPC.cc  MPC.h
agv/landmarks/: vip1a.landmarks  vip1x.landmarks  vip2a.landmarks  vip2x.landmarks  vip3a.landmarks  vip3x.landmarks
agv/landmarks/archive/: non_vip_reverse.landmarks  special_points_ax.landmarks  special_points_xa.landmarks  tunnelto10n.landmarks  vip_forward.landmarks  vip_reverse.landmarks
agv/lanes/: centerline_ax.lane  centerline_xa.lane  lane_info_ax.lane  lane_info_xa.lane  left_boundary_ax.lane  left_boundary_xa.lane  right_boundary.lane
agv/launch/: agvnavigation3.launch  behaviour_planner_node.launch  collision_detector.launch  deprojection.launch  devtest.launch  lanepublisher.launch  local_planner_node.launch  mpc_controller_node.launch  sensor_fusion.launch  unit3.launch
agv/maps/: micronMap_17dec19.yaml
agv/meshes/: arrow.stl  buggy.stl  endpoint.stl
agv/msg/: ActuatorHealth.msg  ActuatorState.msg  Behaviour.msg  DataReader.msg  EncoderCount.msg  HealthMonitor.msg  Maps.msg
agv/paths/: test.path  testx.path  vip1a.path  vip1x.path  vip3a.path  vip3a0805.path  vip3x.path  vip3x0805.path
agv/paths/archive/: 10nto10a.path  10nto10a2.path  10xtotunnel.path  10xtotunnel2.path  dryrun.path  dryrun2.path  f10.path  fun.path  fun2.path  gg.path  gg2.path  homerun.path  homerun2.path  non_vip_forward.path  non_vip_forward_731.path  non_vip_forward_801.path  non_vip_reverse.path  non_vip_reverse_731.path  reversed_f10.path  test.path  test2.path  tunnelloop.path  tunnelto10n.path  tunnelto10n2.path  vip_forward.path  vip_forward_731.path  vip_forward_801.path  vip_reverse.path  vip_reverse_731.path  workshopto10a.path  workshopto10a2.path
agv/rviz/: agv_topdown.rviz  amcl.rviz  thirdperson.rviz  topdown.rviz
agv/src/: behaviour_planner_node.cpp  collision_detector_node.cpp  data_reader.cpp  deprojection.cpp  dynamixel_brake_controller.cpp  dynamixel_steering_controller_proplus.cpp  encoder_odometry_system.cpp  health_monitor.cpp  joystick_teleop.cpp  lane_publisher.cpp  local_planner_node.cpp  mpc_controller_node.cpp  nav_cmd_constructor.cpp  path_publisher.cpp  reinit.cpp  rviz_baselink_visualization.cpp  sensor_fusion.cpp  socket_server.py  stanley_steering_controller.cpp
agv/src/dynamixels_steering/: dynamixel_steering_controller.cpp  dynamixel_steering_controller_proplus.cpp
