<?xml version="1.0"?>
<package format="2">
  <name>agv</name>
  <version>0.0.0</version>
  <description>The agv package</description>
  <maintainer email="agv@todo.todo">agv</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sick_tim</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>velodyne</build_depend>
  <build_depend>frenet_planner</build_depend>
  <build_depend>mpc</build_depend>

  <exec_depend>mpc</exec_depend>
  <exec_depend>frenet_planner</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>velodyne</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
